@@ -52,3 +52,18 @@ Template: partman/method_short/raid
 Type: text
 # :sl3:
 _Description: raid
+
+Template: partman-md/device_remove_md
+Type: boolean
+Default: false
+# :sl3:
+_Description: Remove existing software RAID partitions?
+ The selected device contains partitions used for software RAID devices.
+ The following devices and partitions are about to be removed:
+ .
+ Software RAID devices about to be removed: ${REMOVED_DEVICES}
+ .
+ Partitions used by these RAID devices: ${REMOVED_PARTITIONS}
+ .
+ Note that this will also permanently erase any data currently on the
+ software RAID devices.
