@@ -10,6 +10,11 @@ partman-partitioning (61) UNRELEASED; urgency=low
     Requires partman-base (>= 124).
   * Remove unused partman-partitioning/new_partition_fs template.
   * Remove useless stralign in active_partition/resize/choices.
+  * In create_new_label(), we now remove MD devices in the same way than LVM.
+    As partman-md now scans for existing MD devices during
+    partman initialization, it is required in order to make guided
+    partitioning work on a disk that was previously used for an MD device.
+    Requires partman-md (>= 42).
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 18 Jul 2008 16:30:58 +0000
 
